feat: google login

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ ZERO_UPSTREAM_DB="postgres://..."
 BETTER_AUTH_SECRET="" # TODO: Pick a password for better-auth
 GITHUB_CLIENT_ID="" # TODO: Enter your github oauth app client id
 GITHUB_CLIENT_SECRET="" # TODO: Enter your github oauth app client secret
+GOOGLE_CLIENT_ID="" # TODO: Enter google cloud client id
+GOOGLE_CLIENT_SECRET="" # TODO: Enter google cloud client secret
+
 PUBLIC_SERVER="http://localhost:4848"
 
 # Set to `.yourdomain.com` to enable cookie auth in prod
